add: docs update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immutable-notes",
   "version": "1.0.0",
-  "description": "immutableJs notes",
+  "description": "immutableJs notes.",
   "homepage": "https://github.com/afeiship/immutable-notes",
   "author": {
     "name": "afei",
