--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/core": "^1.0.0-alpha.44",
+    "prettier": "^1.18.2",
     "vuepress": "^1.0.0-alpha.44"
+  },
+  "dependencies": {
+    "immutable": "^4.0.0-rc.12"
   }
 }
